# learn_python

./: .gitignore  README.md  calculate_distance.py  call_twice.py  closure.py  compose.py  covert.py  decode.py  filter_anagrams.py  filter_map.py  find_index_of_nearest.py  flatten.py  get_colors.py  get_men_couted_by_year.py  get_x_get_y.py  greet.py  high-order_fuctions.py  ip2int.py  is_even.py  make_module.py  make_rectangle.py  make_segment.py  make_url.py  memoized.py  memoizing.py  pyproject.toml  rational_make.py  remove_first_level.py  rgb2hex.py  same_parity_filter.py
classes/: Color.py  RGB.py
functions/: calculate_distance.py  call_twice.py  compose.py  convert.py  decode.py  filter_anagrams.py  filter_map.py  find_index_of_nearest.py  flatten.py  get_colors.py  get_men_couted_by_year.py  get_mid_point.py  get_x_get_y.py  greet.py  high_order_functions.py  histo.py  ichunks.py  ip2int.py  is_even.py  is_valid_ipv6.py  make_module.py  make_rational.py  make_rectangle.py  make_segment.py  make_url.py  memoized.py  memoizing.py  merged.py  multiply.py  partial_apply.py  points.py  remove_first_level.py  rgb2hex.py  same_parity_filter.py  segments.py  snail_path.py  stringify.py  sum_of_intervals.py  to_roman.py  triangle.py  (+3 more)
tasks/: Color  calculate_distance  call_twice  compose  convert  decode  filter_anagrams.txt  filter_map.txt  find_index_of_nearest.txt  flatten  get_colors.txt  get_men_counted_by_year  get_mid_point.txt  get_x_get_y.txt  greet  high_order_functions  histo.txt  ichunks  ip2int  is_even.txt  is_valid_ipv6.txt  make_module  make_rational  (+19 more)
(+51 files in other folders)
