[tool.poetry]
name = "learn_python"
version = "0.1.0"
description = ""
authors = ["Sergey Kornienko <skornienko29@gmail.com>"]
packages = [
  { include = "functions" },
]


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
